--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.12",
+        "vite": "^5.0",
+        "vite-plugin-vue-devtools": "^7.4.5"
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
