--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
         "vue": "^3.5.6"
+    },
+    "prettier": {
+        "htmlWhitespaceSensitivity": "ignore",
+        "bracketSameLine": true
     }
 }
