--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
+        "jewish-date": "^2.0.12",
         "vue": "^3.5.6"
     },
     "prettier": {
