--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite-plugin-vue-devtools": "^7.4.5"
     },
     "dependencies": {
+        "@hebcal/core": "^5.5.2",
         "@inertiajs/vue3": "^1.2.0",
         "jewish-date": "^2.0.12",
         "vue": "^3.5.6"
