--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@hebcal/core": "^5.5.2",
+        "@hebcal/leyning": "^8.2.6",
         "@inertiajs/vue3": "^1.2.0",
         "jewish-date": "^2.0.12",
         "vue": "^3.5.6"
