feat: deploy app to vercel feat: force https on production refactor: move from sqlite to postgresql

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "prettier": {
         "htmlWhitespaceSensitivity": "ignore",
         "bracketSameLine": true
+    },
+    "engines": {
+        "node": "18.x"
     }
 }
