--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
         "api/index.php": { "runtime": "vercel-php@0.7.3" }
     },
     "routes": [
+        { "src": "/build/(.*)", "dest": "/public/build/" },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
@@ -13,7 +14,6 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://shul-tools-one.vercel.app",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
