--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.47",
+        "prettier": "^3.3.3",
+        "prettier-plugin-classnames": "^0.7.4",
+        "prettier-plugin-tailwindcss": "^0.6.8",
         "tailwindcss": "^3.4.12",
         "vite": "^5.0",
         "vite-plugin-vue-devtools": "^7.4.5"
@@ -25,7 +28,11 @@
     },
     "prettier": {
         "htmlWhitespaceSensitivity": "ignore",
-        "bracketSameLine": true
+        "bracketSameLine": true,
+        "plugins": [
+            "prettier-plugin-classnames",
+            "prettier-plugin-tailwindcss"
+        ]
     },
     "engines": {
         "node": "18.x"
