--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "symfony/http-client": "^7.1",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
