--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bjnstnkvc/mail-components": "^1.1",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
